--- a/src/main/resources/assets/blackout/lang/EN_US.lang
+++ b/src/main/resources/assets/blackout/lang/EN_US.lang
@@ -1,3 +1,5 @@
 tile.stellar_fabricator.name=Stellar Fabricator
+tile.magnesium.name=Magnesium Block
 
 item.distortion_core.name=Spacetime Distortion Core
+item.ingot_magnesium.name=Magnesium Ingot
