--- a/src/main/resources/assets/blackout/lang/EN_US.lang
+++ b/src/main/resources/assets/blackout/lang/EN_US.lang
@@ -1,5 +1,7 @@
 tile.stellar_fabricator.name=Stellar Fabricator
 tile.magnesium.name=Magnesium Block
+tile.chest.name=Chest
+tile.trapped_chest.name=Trapped Chest
 
 item.distortion_core.name=Spacetime Distortion Core
 item.ingot_magnesium.name=Magnesium Ingot
